# osparc-iseg

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  CODEOWNERS  CompilingMacOS.md  LICENSE  Makefile  README.md  config.h.in  travis.yml.bkp
Addon/: Addon.cpp  Addon.h  AddonApi.h  CMakeLists.txt  SlicesHandlerInterface.h  itkImportSliceContiguousImageContainer.h  itkImportSliceContiguousImageContainer.txx  itkSliceContiguousImage.h  itkSliceContiguousImage.txx  itkSliceContiguousImagePixelAccessor.h  qwidget1.cpp  qwidget1.h
Addon/testsuite/: CMakeLists.txt  test_AddonMain.cpp  test_iSegImageAdaptor.cpp
Core/: 3D_outlines.cpp  3D_outlines.h  3Dsegment.cpp  3Dsegment.h  BinaryThinningImageFilter.h  BranchItem.cpp  BranchItem.h  BranchTree.h  CMakeLists.txt  ColorLookupTable.cpp  ColorLookupTable.h  ColorPalette256.h  ColorPalette512.h  ConnectedShapeBasedInterpolation.h  Contour.cpp  Contour.h  DataSelection.h  EM.cpp  EM.h  ExpectationMaximization.cpp  ExpectationMaximization.h  FeatureExtractor.cpp  FeatureExtractor.h  Graph.h  HDF5Blosc.cpp  HDF5Blosc.h  HDF5IO.cpp  HDF5IO.h  HDF5IO.inl  HDF5Reader.cpp  HDF5Reader.h  HDF5Writer.cpp  HDF5Writer.h  IFT2.h  ImageConnectivtyGraph.h  ImageForestingTransform.h  ImageReader.cpp  ImageReader.h  ImageToITK.h  ImageWriter.cpp  (+107 more)
Core/VtkGlue/: itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.hxx  itkVTKImageToImageFilter.h
Core/testsuite/: CMakeLists.txt  test_BinaryThinning.cpp  test_ConnectedInterpolation.cpp  test_HDF5IO.cpp  test_ImageIO.cpp  test_Transform.cpp  test_iSegCoreMain.cpp
Data/: AddConnected.h  Brush.h  BrushInteraction.cpp  BrushInteraction.h  CMakeLists.txt  Color.cpp  Color.h  DataSelection.h  ExtractBoundary.h  ImageToITK.cpp  ImageToITK.h  ItkProgressObserver.cpp  ItkProgressObserver.h  ItkUtils.h  LogApi.cpp  LogApi.h  Logger.cpp  Logger.h  Mark.h  Point.h  ProgressInfo.h  Property.cpp  Property.h  ScopeExit.h  ScopedTimer.h  SharedPtr.h  Signals.h  SliceHandlerItkWrapper.cpp  SliceHandlerItkWrapper.h  SlicesHandlerITKInterface.cpp  SlicesHandlerITKInterface.h  SlicesHandlerInterface.h  TimeStamp.cpp  TimeStamp.h  Transform.cpp  Transform.h  Types.h  Vec3.h  addLine.cpp  addLine.h  (+1 more)
Data/testsuite/: CMakeLists.txt  itkRGBToLabColorSpacePixelAccessor.h  test_Brush.cpp  test_DataMain.cpp  test_Logging.cpp  test_Properties.cpp  test_SuperPixel.cpp  test_Transform.cpp  test_iSegImageAdaptor.cpp
GeometricPredicates/: CMakeLists.txt  GeometricPredicates.cxx  GeometricPredicates.h  predicates.cxx
Interface/: CMakeLists.txt  CollapsibleWidget.cpp  CollapsibleWidget.h  FormatTooltip.h  InterfaceApi.h  ItkProgressDialog.h  ItkUtils.h  LayoutTools.h  Mark.h  Plugin.cpp  Plugin.h  ProgressDialog.cpp  ProgressDialog.h  PropertyWidget.cpp  PropertyWidget.h  QSliderEditableRange.cpp  QSliderEditableRange.h  QtConnect.h  RecentPlaces.cpp  RecentPlaces.h  SlicesHandlerInterface.h  SplitterHandle.cpp  SplitterHandle.h  WidgetInterface.cpp  WidgetInterface.h  addLine.cpp  addLine.h  iSegInterface.h
Interface/testsuite/: CMakeLists.txt  test_PluginMain.cpp  test_iSegImageAdaptor.cpp
Plugin/testsuite/: CMakeLists.txt  test_PluginMain.cpp
Plugins/: CMakeLists.txt
Plugins/BiasCorrection/: BiasCorrection.cpp  BiasCorrection.h  BiasCorrectionAddon.cpp  BiasCorrectionAddon.h  BiasCorrectionPlugin.cpp  BiasCorrectionPlugin.h  CMakeLists.txt
Plugins/ConfidenceConnected/: CMakeLists.txt  Confidence.cpp  Confidence.h  ConfidenceAddon.cpp  ConfidenceAddon.h  ConfidencePlugin.cpp  ConfidencePlugin.h  ConfidenceWidget.cpp  ConfidenceWidget.h
Plugins/GraphCut/: BoneSegmentationWidget.cpp  BoneSegmentationWidget.h  CMakeLists.txt  GraphCutAddon.cpp  GraphCutAddon.h  GraphCutAlgorithms.h  GraphCutAlgorithms.hxx  GraphCutBoneSegmentation.cpp  GraphCutBoneSegmentation.h  GraphCutPlugin.cpp  GraphCutPlugin.h  GraphCutTissueSeparator.cpp  GraphCutTissueSeparator.h  ImageGraphCut3DFilter.h  ImageGraphCut3DFilter.hxx  TissueSeparatorWidget.cpp  TissueSeparatorWidget.h
Plugins/KalmanFilterTracing/: AutoTubePanel.cpp  AutoTubePanel.h  CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  TracingPlugin.cpp  TracingPlugin.h
Plugins/Levelset/: CMakeLists.txt  Levelset.cpp  Levelset.h  LevelsetAddon.cpp  LevelsetAddon.h  LevelsetPlugin.cpp  LevelsetPlugin.h  LevelsetWidget.cpp  LevelsetWidget.h
Plugins/TracingTubularStructures/: AutoTubePanel.cpp  AutoTubePanel.h  AutoTubeWidget.cpp  AutoTubeWidget.h  CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  SmoothPolyline.h  TraceTubesWidget.cpp  TraceTubesWidget.h  TracingPlugin.cpp  TracingPlugin.h  itkNonMaxSuppressionImageFilter.h  itkNonMaxSuppressionImageFilter.hxx  itkWeightedDijkstraImageFilter.h  itkWeightedDijkstraImageFilter.hxx
TestRunner/: CMakeLists.txt  TestRunner.cpp
common/: CMakeLists.txt  Matrix.h  Matrix.mpl  MatrixC.h  SmallMatrix.h  SmallMatrixC.h  SmallVector.h  Tools.cxx  Tools.h  Vector.h  Vector3.h
common/HDF5IO/: CMakeLists.txt  HDF5IO.cpp  HDF5IO.h  HDF5IO.inl  HDF5IOApi.h  HDF5Reader.cxx  HDF5Reader.h  HDF5Writer.cxx  HDF5Writer.h  existsValidHdf5.cxx  test-hdf5.cxx
iSeg/: ActiveSlicesConfigDialog.cpp  ActiveSlicesConfigDialog.h  ActiveslicesConfigWidget.cpp  ActiveslicesConfigWidget.h  Atlas.cpp  Atlas.cxx  Atlas.h  AtlasViewer.cpp  AtlasViewer.cxx  AtlasViewer.h  AtlasWidget.cpp  AtlasWidget.cxx  AtlasWidget.h  AvwReader.cpp  AvwReader.h  CMakeLists.txt  ChannelExtractor.cpp  ChannelExtractor.h  DataIteratorWidget.cpp  DataIteratorWidget.h  DicomReader.cpp  DicomReader.h  EdgeWidget.cpp  EdgeWidget.h  FastmarchingFuzzyWidget.cpp  FastmarchingFuzzyWidget.h  FeatureWidget.cpp  FeatureWidget.h  FindOpenCL.cmake  FormatTooltip.h  HystereticGrowingWidget.cpp  HystereticGrowingWidget.h  IFT_rg.cpp  IFT_rg.h  ImageForestingTransformRegionGrowingWidget.cpp  ImageForestingTransformRegionGrowingWidget.h  ImageInformationDialogs.cpp  ImageInformationDialogs.h  ImageViewerWidget.cpp  ImageViewerWidget.h  (+212 more)
iSeg/OpenCLUtilities/: ._openCLGLUtilities.hpp  ._openCLUtilities.hpp  CMakeLists.txt  README  openCLGLUtilities.cpp  (+3 more)
(+102 files in other folders)
