##
## Copyright (c) 2018 The Foundation for Research on Information Technologies in Society (IT'IS).
## 
## This file is part of iSEG
## (see https://github.com/ITISFoundation/osparc-iseg).
## 
## This software is released under the MIT License.
##  https://opensource.org/licenses/MIT
##
PROJECT(ISEG C CXX)
SET(CMAKE_CXX_STANDARD 11)
SET(ISEG_VERSION_MAJOR 3)
SET(ISEG_VERSION_MINOR 10)
SET(ISEG_VERSION_PATCH 8)
SET(ISEG_VERSION
  ${ISEG_VERSION_MAJOR}.${ISEG_VERSION_MINOR}.${ISEG_VERSION_PATCH})
SET(ISEG_PRODUCT_NAME "iSEG_v${ISEG_VERSION}")
  
CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Which Build Types to support" FORCE)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

SET(BUILD_SHARED_LIBS ON)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/Modules/")
INCLUDE( ${CMAKE_SOURCE_DIR}/CMake/InstallAllUsedLibraries.cmake )

LIST( APPEND ISEG_CMAKE_FILES_INCLUDES 
	${CMAKE_SOURCE_DIR}/CMake/CommonMacros.cmake
	${CMAKE_SOURCE_DIR}/CMake/CMakeSetProperty.cmake
	${CMAKE_SOURCE_DIR}/CMake/PrecompiledHeaderSupport.cmake
	${CMAKE_SOURCE_DIR}/CMake/ThirdPartyBoost.cmake
	${CMAKE_SOURCE_DIR}/CMake/ThirdPartyHDF5.cmake
	${CMAKE_SOURCE_DIR}/CMake/ThirdPartyITK.cmake
	${CMAKE_SOURCE_DIR}/CMake/ThirdPartyQT4.cmake
	${CMAKE_SOURCE_DIR}/CMake/ThirdPartyVTK.cmake
)
FOREACH( include_file ${ISEG_CMAKE_FILES_INCLUDES} )
	INCLUDE( ${include_file} )
ENDFOREACH()
MSVC_ONLY_EDIT_PROJECT( CMakeIncludes 
	${ISEG_CMAKE_FILES_INCLUDES}
	${INSTALL_ALL_USED_LIBRARIES_CMAKE} # to make sure, it is always added independent of option
)


OPTION(ISEG_BUILD_TESTING "Build tests" ON)
OPTION(ISEG_BUILD_PRECOMPILED_HEADER "Build precompiled header files" OFF)
OPTION(ISEG_GPU_MC "Build iSEG with OpenCL Marching Cubes implementation" OFF)
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/config.h.in ${CMAKE_BINARY_DIR}/config.h)


IF(MSVC)
	ADD_DEFINITIONS("/D _CRT_SECURE_NO_WARNINGS /D _SCL_SECURE_NO_WARNINGS")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP4")
ENDIF(MSVC)


# common libs
ADD_SUBDIRECTORY(common)
SET(LIBS Tools HDF5IO)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}/common
	${CMAKE_SOURCE_DIR}/common/HDF5IO
	${CMAKE_BINARY_DIR}
)

ADD_SUBDIRECTORY(GUISupport)
ADD_SUBDIRECTORY(GeometricPredicates)
ADD_SUBDIRECTORY(GDCM)
ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Addon)
ADD_SUBDIRECTORY(iSeg)
ADD_SUBDIRECTORY(Plugins)


# copy dlls and images to build folder
INSTALL_ALL_USED_LIBRARIES()

FOREACH(BUILD_TYPE ${CMAKE_CONFIGURATION_TYPES})
	MESSAGE(STATUS "BUILD_TYPE = ${BUILD_TYPE}")
	FILE(INSTALL ${CMAKE_SOURCE_DIR}/iSeg/images/ DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${BUILD_TYPE}/images FILES_MATCHING PATTERN "*.png" PATTERN ".svn" EXCLUDE)
	CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/iSeg/images/isegicon64.ico ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${BUILD_TYPE}/images/isegicon.ico COPYONLY)
ENDFOREACH()